--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Denny Petersson",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
