--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Denny Petersson",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "http-errors": "^1.8.0",
