--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongo-seeding": "^3.5.0",
     "mongoose": "^5.11.16",
+    "morgan": "^1.10.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
